complete s5, reach best BLEU, todo add summary graph

--- a/s5/everything.ipynb
+++ b/s5/everything.ipynb
@@ -1051,7 +1051,11 @@
     "\n",
     "        @param initialStates (tuple(Tensor, Tensor)): initial internal state of the LSTM, \n",
     "        a tuple of two tensors of size (1, batch_size, hidden_size)\n",
-    "        \n",
+    "        NOTE that this is the new hidden state h (the combined output vector, which is AN ACTIVATION) \n",
+    "            which is selectively chosen b/c word-model produces UNK tokens at these position\n",
+    "        Our job is to create a matrix of size (bs,max_length) initialized with start_of_word token\n",
+    "        and run it recursively through CharDecoderLSTM to generate a list of words (with length bs) \n",
+    "        to replace these UNKs\n",
     "        \n",
     "        @param device: torch.device (indicates whether the model is on CPU or GPU)\n",
     "        @param max_length (int): maximum length of words to decode\n",
@@ -1062,21 +1066,20 @@
     "        \"\"\"\n",
     "        bs = initialStates[0].shape[1]\n",
     "        dec_hidden = initialStates\n",
-    "        inp = torch.LongTensor([[self.target_vocab.start_of_word]*bs], \n",
-    "                           device=device) # shape (1,bs). \n",
+    "        inp = torch.LongTensor([[self.target_vocab.start_of_word]*bs]).to(device) # shape (1,bs). \n",
     "        \n",
     "        # Bptt is always 1 for inp (even for the loop below) instead of increment from 1\n",
     "        # because we already update dec_hidden for LSTM\n",
     "        # Otherwise, we will feed (1,bs) then (2,bs) ... (max_length-1,bs) into LSTM without\n",
     "        # feeding dec_hidden. This wastes computation however.\n",
     "        \n",
-    "        results=torch.LongTensor([[0]*bs],device=device) # (1,bs)\n",
+    "        results=torch.LongTensor([[0]*bs]).to(device) # (1,bs)\n",
     "        for s in range(max_length):\n",
     "            scores,dec_hidden = self.forward(inp,dec_hidden) #(1,bs,vocab_size)\n",
     "            inp = F.softmax(scores,dim=2).argmax(dim=2) # (1,bs)\n",
-    "            # print(f'{s}: {inp}')\n",
-    "            # BIG FAT TODO: at s=0, even though inp is the same: 1,bs vector filled with start_of_word index\n",
-    "            # output vector (not sure at h or after blue-transformation) (1,bs) have different values. Pls do a LSTM check in notebook\n",
+    "            # at s=0, even though inp is the same (1,bs vector filled with start_of_word index)\n",
+    "            # new inp (1,bs) will have different values because the  values are determined by dec_hidden, not the LSTM itself \n",
+    "            # dec_hidden has shape (1,bs,hidden_size), so basically like running a NN linear layer\n",
     "            results = torch.cat([results,inp.detach()])\n",
     "\n",
     "        decodedWords = []\n",
@@ -1106,6 +1109,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final BLEU score after running on full dataset\n",
+    "\n",
+    "Train:\n",
+    "- epoch 29, iter 196000, cum. loss 82.27, cum. ppl 54.79 cum. examples 64000\n",
+    "- begin validation ...\n",
+    "- validation: iter 196000, dev. ppl 66.432232\n",
+    "- hit patience 1\n",
+    "-...\n",
+    "- epoch 29, iter 196330, avg. loss 86.20, avg. ppl 60.32 cum. examples 10537, speed 5536.83 words/sec, time elapsed 23065.94 sec\n",
+    "- reached maximum number of epochs!\n",
+    "\n",
+    "\n",
+    "Test:\n",
+    "- Corpus BLEU: 36.56285318055767 which is > 36 ==> full 6 points\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -1130,6 +1153,7 @@
     }
    ],
    "source": [
+    "# minor testing\n",
     "#(length,bs,vocab_size)\n",
     "temp = torch.randn(2,4,3)\n",
     "temp"
@@ -1156,48 +1180,6 @@
    "source": [
     "temp2=F.softmax(temp,dim=2).argmax(dim=2)\n",
     "temp2,temp2.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[0, 0, 0, 0]]), torch.Size([1, 4]))"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp = torch.LongTensor([[0]*4])\n",
-    "temp,temp.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0, 0, 0, 0],\n",
-       "        [1, 1, 1, 1]])"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cat([temp,torch.LongTensor([[1]*4])],dim=0)"
    ]
   }
  ],
