--- a/s5/everything.ipynb
+++ b/s5/everything.ipynb
@@ -847,6 +847,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../images/ex5_3.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -958,6 +965,13 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../images/ex5_4.png)"
    ]
   },
   {
