add note for contextual word model

--- a/stanford_subword_models.ipynb
+++ b/stanford_subword_models.ipynb
@@ -29,6 +29,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12800000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#(From assignment 5)\n",
+    "# e_word = 256,word_vocab = 5*10**4\n",
+    "# number of parameters (word model embedding)\n",
+    "word_params = 5*10**4*256\n",
+    "word_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200128"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# e_char = 50,char vocab = 96, CNN kernel size = 5, filter size = 256\n",
+    "# number of parameters (char model embedding with CNN and highway)\n",
+    "char_params = 96*50 + 256 + 256*(5*50)+ 256*256*2\n",
+    "char_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63.95906619763351"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_params / char_params\n",
+    "# word model emb has 64 times more params than char model emb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
