note for transformer

--- a/stanford-contextual-word-representation.ipynb
+++ b/stanford-contextual-word-representation.ipynb
@@ -12,15 +12,15 @@
    "metadata": {},
    "source": [
     "Up until now, we’ve basically had one representation of words: The word vectors that we learned about at the beginning\n",
-    "    - Word2vec, GloVe, fastText\n",
+    "- Word2vec, GloVe, fastText\n",
     "    \n",
     "Problems:\n",
-    "    - **Problem 1**: a word can have different meanings (\"sense\"), depending on the context, and now we try to collapse all the meanings of a word into 1 single vector, and hope that your model is complex enough that it can pick out the correct word meaning\n",
-    "        - quick solution: define different word-senses for each word and build a vector for each\n",
+    "- **Problem 1**: a word can have different meanings (\"sense\"), depending on the context, and now we try to collapse all the meanings of a word into 1 single vector, and hope that your model is complex enough that it can pick out the correct word meaning\n",
+    "- quick solution: define different word-senses for each word and build a vector for each\n",
     "\n",
     "=> what you want is to **build not a perfect word vector that can capture all of its meanings, but a word vector that is correct in your given context**\n",
     "\n",
-    "    - **Problem 2**: on a more general view, not just different meanings but words have different aspects, including semantics, syntactic behavior, and register/connotations.\n",
+    "- **Problem 2**: on a more general view, not just different meanings but words have different aspects, including semantics, syntactic behavior, and register/connotations.\n",
     "    "
    ]
   },
@@ -71,11 +71,223 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# ELMO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Peters et al. (2018): ELMo: Embeddings from Language\n",
+    "Models\n",
+    "- Train a bidirectional LM\n",
+    "- Aim at performant but not overly large LM:\n",
+    "    - Use 2 biLSTM layers\n",
+    "    - Use character CNN to build initial word representation (only)\n",
+    "        - 2048 char n-gram filters and 2 highway layers, 512 dim projection\n",
+    "    - User 4096 dim hidden/cell LSTM states with 512 dim projections to next input\n",
+    "    - Use a residual connection\n",
+    "    - Tie parameters of token input and output (softmax) and tie these between forward and backward LMs\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "- TagLM uses only the top layer of LSTM stack; **ELMO utilizes all the layers of LSTM stack, and assign a learnable scaling factor to determine how much of a layer (which can contribute to a \"task\") to take in**\n",
+    "    - First run biLM to get representations for each word\n",
+    "    - Then let (whatever) end-task model use them\n",
+    "        - Freeze weights of ELMo for purposes of supervised model\n",
+    "        - Concatenate ELMo weights into task-specific model\n",
+    "        - Details depend on task\n",
+    "            - Concatenating into intermediate layer as for TagLM is typical\n",
+    "            - Can provide ELMo representations again when producing outputs, as in a question answering system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## weighting of layers for different tasks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The two biLSTM NLM layers have differentiated uses/meanings\n",
+    "- Lower layer is better for lower-level syntax, etc.\n",
+    "    - Part-of-speech tagging, syntactic dependencies, NER\n",
+    "- Higher layer is better for higher-level semantics\n",
+    "    - Sentiment, Semantic role labeling, question answering, SNLI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want parallelization but RNNs are inherently sequential\n",
+    "- Despite GRUs and LSTMs, **RNNs still need attention mechanism to deal with long range dependencies** – path length between states grows with sequence otherwise\n",
+    "- But if attention gives us access to any state… **maybe we can just use attention and don’t need the RNN?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformer's Encoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Self-attention in the **encoder**\n",
+    "\n",
+    "- The input word vectors are the queries, keys and values\n",
+    "- In other words: the word vectors themselves select each other\n",
+    "- Word vector stack = Q = K = V\n",
+    "- We’ll see in the decoder why we separate them in the definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multihead attention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: mapping Q,K,V to multiple lower dimensional spaces using fully-connected linear layer\n",
+    "- for head 1 (i=1), use weight matrix WiQ for Q, W1K for K and W1V for V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Complete transformer block"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_5.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Layer norm formula is essentially the same as batchnorm, but\n",
+    "- calculated for EACH TRAINING POINT\n",
+    "- No moving average\n",
+    "- Average over the hidden dimension to make the norm strategy independent of the batch size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multi-block with multi-head attention vs LSTM/RNN\n",
+    "\n",
+    "- RNN:\n",
+    "    - \\+ get recurrent information carried in a sentence by feeding 1 batch of words at a time\n",
+    "    - \\- CANNOT parallelize using GPU, aka cannot feed the entire batch of sentences at once\n",
+    "- multi-block with multi-head attention\n",
+    "    - \\+ With block stacking on top of each other, each block will try to capture information in a chain: 1st block can capture 1st info of a chain, 2nd block can capture 2nd info of a chain => similar to RNN\n",
+    "    - \\+ CAN feed the entire batch of sequences => parallelize well using GPUs\n",
+    "    - \\- disregard the position of words in a sentence: 2 of the same words in different position might be treated the same way, or dont know where you are at in the sentence\n",
+    "        - Solution: **positional encoding** so same words at different locations have different overall representations:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The complete encoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_6.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO: visualization in encoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Attention visualization in layer 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_7.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformer's Decoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO"
+   ]
   }
  ],
  "metadata": {
