transformer intro done

--- a/stanford-contextual-word-representation.ipynb
+++ b/stanford-contextual-word-representation.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "Note: \n",
     "- only concat the hidden state, not the embeddings of LM model and w2v model\n",
-    "- This is **not end-to-end training for LM model**: by 'pretrained', we only use the output hidden state of LM model as input for the Sequence-tagging feature. In another word, the LM model is trained first ('pretrained') and is frozen after we extract the hidden states\n"
+    "- This is **not end-to-end training**: by 'pretrained', we only use the output hidden state of LM model as input for the Sequence-tagging feature. **In another word, the LM model is trained first ('pretrained') and is frozen after we extract the hidden states**\n"
    ]
   },
   {
@@ -127,6 +127,13 @@
    "metadata": {},
    "source": [
     "# Transformers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://nlp.seas.harvard.edu/2018/04/03/attention.html"
    ]
   },
   {
@@ -287,6 +294,155 @@
    "metadata": {},
    "source": [
     "TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BERT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pre-training of Deep Bidirectional Transformers for Language Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem: Language models only use left context or right context, why?\n",
+    "- Reason 1: Directionality is needed to generate a well-formed probability distribution.\n",
+    "- Reason 2: Words can “see themselves” (cheating) in a bidirectional encoder.\n",
+    "\n",
+    "**but language understanding is bidirectional.**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solution: Mask out k% of the input words, and then predict the\n",
+    "masked words\n",
+    "- They always use k = 15%\n",
+    "                  store          gallon\n",
+    "                    ↑              ↑ \n",
+    "the man went to the [MASK] to buy a [MASK] of milk\n",
+    "- Too little masking: Too expensive to train\n",
+    "- Too much masking: Not enough context\n",
+    "\n",
+    "TODO: can we do a multiclass prediction and choose synonyms of [MASK] words?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BERT next sentence prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_8.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- a binary classification task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## a typical embedding input of BERT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_9.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that you will add these 3 embeddings since you will use multi-head encoder (Transformer) which take attention from words (it won't be ideal to concatenate them and perform attention?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Noted that wordpieces are not simply word embeddings: i\n",
+    "- Wordpiece model tokenizes inside words\n",
+    "- BERT uses a variant of the wordpiece model\n",
+    "    - (Relatively) use common words that are in the vocabulary: at, fairfax, 1910s\n",
+    "- Other words are built from wordpieces:\n",
+    "    - hypatia = h ##yp ##ati ##a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## losses\n",
+    "\n",
+    "You will have 2 losses: one from predict the [MASK] words and one binary prediction's loss from predict whether correct next sentence or not"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BERT model architecture and training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "- Transformer encoder (as before)\n",
+    "- Self-attention ⇒ no locality bias\n",
+    "    - Long-distance context has “equal opportunity”\n",
+    "- Single multiplication per layer ⇒ efficiency on GPU/TPU\n",
+    "- Train on Wikipedia + BookCorpus\n",
+    "- Train 2 model sizes:\n",
+    "    - BERT-Base: 12-layer, 768-hidden, 12-head\n",
+    "    - BERT-Large: 24-layer, 1024-hidden, 16-head\n",
+    "- Trained on 4x4 or 8x8 TPU slice for 4 days"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BERT model finetuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can take the model, pre-train, and use that same architecture + weights for different tasks\n",
+    "- Simply learn a classifier built on the top layer for the task that you fine tune for (similarly to ULMfit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/transformer_10.png)"
    ]
   }
  ],
