--- a/stanford_subword_models.ipynb
+++ b/stanford_subword_models.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BPE"
+    "## Byte pair encoding (BPE)"
    ]
   },
   {
