--- a/fastai2_nlp/scratch.ipynb
+++ b/fastai2_nlp/scratch.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check different tokenizer in fastai library (word, subword ...)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -244,6 +251,643 @@
    "source": [
     "type(spacy),type(SubwordTokenizer(vocab_sz=100)) \n",
     "# note that these 2 are not inherited from Transform class so __call__ is very different"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check understanding of gradient computation graph and requires_grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](require_grad_1.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(200., grad_fn=<SumBackward0>)"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=torch.tensor([2.]*10, requires_grad=True)\n",
+    "y=x**2\n",
+    "z=0\n",
+    "z=z+x**3\n",
+    "z = z*2\n",
+    "print(z.requires_grad)\n",
+    "r=(y+z).sum()\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([28., 28., 28., 28., 28., 28., 28., 28., 28., 28.])"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.backward()\n",
+    "x.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(200., grad_fn=<SumBackward0>)"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=torch.tensor([2.]*10, requires_grad=True)\n",
+    "y=x**2\n",
+    "z=0\n",
+    "z=z+x**3\n",
+    "print(z.requires_grad)\n",
+    "z = z.detach() # from now on, everything being done to z won't be backprop back in z direction\n",
+    "z = z*2 # thus this is not counted toward backprop\n",
+    "print(z.requires_grad,x.requires_grad)\n",
+    "r=(y+z).sum()\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([4., 4., 4., 4., 4., 4., 4., 4., 4., 4.])"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.backward()\n",
+    "x.grad # only the y path is backprop, not the z path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Another example, adding another tensor with requires_grad=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(200., grad_fn=<SumBackward0>)"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=torch.tensor([2.]*10, requires_grad=True)\n",
+    "y=x**2\n",
+    "z=0\n",
+    "z=z+x**3\n",
+    "# z = z.detach()\n",
+    "\n",
+    "two = torch.tensor([2.]*10,requires_grad=True)\n",
+    "z = z*two\n",
+    "\n",
+    "r=(y+z).sum()\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([28., 28., 28., 28., 28., 28., 28., 28., 28., 28.]),\n",
+       " tensor([8., 8., 8., 8., 8., 8., 8., 8., 8., 8.]))"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.backward()\n",
+    "x.grad,two.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With detach\n",
+    "\n",
+    "![](require_grad_2.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(200., grad_fn=<SumBackward0>)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=torch.tensor([2.]*10, requires_grad=True)\n",
+    "y=x**2\n",
+    "z=0\n",
+    "z=z+x**3\n",
+    "z = z.detach() # from now on, everything being done to z won't be backprop back in z direction\n",
+    "print(z.requires_grad)\n",
+    "two = torch.tensor([2.]*10,requires_grad=True)\n",
+    "z = z*two # z grad is turned back on to true here, so two's grad will be calculated\n",
+    "# note that x's grad still won't be calculated\n",
+    "print(z.requires_grad)\n",
+    "r=(y+z).sum()\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([4., 4., 4., 4., 4., 4., 4., 4., 4., 4.]),\n",
+       " tensor([8., 8., 8., 8., 8., 8., 8., 8., 8., 8.]))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.backward()\n",
+    "x.grad,two.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(200., grad_fn=<SumBackward0>)"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=torch.tensor([2.]*10, requires_grad=True)\n",
+    "y=x**2\n",
+    "z=0\n",
+    "z=z+x**3\n",
+    "two = torch.tensor([2.]*10,requires_grad=True)\n",
+    "z = z*two\n",
+    "r=(y+z).sum()\n",
+    "print(z.requires_grad)\n",
+    "z = z.detach() # from now on, everything being done to z won't be backprop back in z direction\n",
+    "# so before this, any gradient dependent of z still be calculated (x and two)\n",
+    "print(z.requires_grad)\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([28., 28., 28., 28., 28., 28., 28., 28., 28., 28.]),\n",
+       " tensor([8., 8., 8., 8., 8., 8., 8., 8., 8., 8.]))"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.backward()\n",
+    "x.grad,two.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explaning truncated bptt and LMModel3 requires_grad in forward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastai2.text.all import *\n",
+    "path = untar_data(URLs.HUMAN_NUMBERS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Preparing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(#2) [Path('train.txt'),Path('valid.txt')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Path.BASE_PATH = path\n",
+    "path.ls()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(#9998) ['one \\n','two \\n','three \\n','four \\n','five \\n','six \\n','seven \\n','eight \\n','nine \\n','ten \\n'...]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines = L()\n",
+    "with open(path/'train.txt') as f: lines += L(*f.readlines())\n",
+    "with open(path/'valid.txt') as f: lines += L(*f.readlines())\n",
+    "lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'one . two . three . four . five . six . seven . eight . nine . ten . eleven . twelve . thirteen . fo'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = ' . '.join([l.strip() for l in lines])\n",
+    "text[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['one', '.', 'two', '.', 'three', '.', 'four', '.', 'five', '.']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens = text.split(' ')\n",
+    "tokens[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(#30) ['one','.','two','three','four','five','six','seven','eight','nine'...]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab = L(*tokens).unique()\n",
+    "vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(#63095) [0,1,2,1,3,1,4,1,5,1...]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word2idx = {w:i for i,w in enumerate(vocab)}\n",
+    "nums = L(word2idx[i] for i in tokens)\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(#21031) [(tensor([0, 1, 2]), 1),(tensor([1, 3, 1]), 4),(tensor([4, 1, 5]), 1),(tensor([1, 6, 1]), 7),(tensor([7, 1, 8]), 1),(tensor([1, 9, 1]), 10),(tensor([10,  1, 11]), 1),(tensor([ 1, 12,  1]), 13),(tensor([13,  1, 14]), 1),(tensor([ 1, 15,  1]), 16)...]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seqs = L((tensor(nums[i:i+3]), nums[i+3]) for i in range(0,len(nums)-4,3))\n",
+    "seqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "bs = 64\n",
+    "cut = int(len(seqs) * 0.8)\n",
+    "dls = DataLoaders.from_dsets(seqs[:cut], seqs[cut:], bs=64, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(328, 64, 21031)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = len(seqs)//bs\n",
+    "m,bs,len(seqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "def group_chunks(ds, bs):\n",
+    "    m = len(ds) // bs\n",
+    "    new_ds = L()\n",
+    "    for i in range(m): new_ds += L(ds[i + m*j] for j in range(bs))\n",
+    "    return new_ds\n",
+    "cut = int(len(seqs) * 0.8)\n",
+    "dls = DataLoaders.from_dsets(\n",
+    "    group_chunks(seqs[:cut], bs), \n",
+    "    group_chunks(seqs[cut:], bs), \n",
+    "    bs=bs, drop_last=True, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LMModel3(Module):\n",
+    "    def __init__(self, vocab_sz, n_hidden):\n",
+    "        self.i_h = nn.Embedding(vocab_sz, n_hidden)  \n",
+    "        self.h_h = nn.Linear(n_hidden, n_hidden)     \n",
+    "        self.h_o = nn.Linear(n_hidden,vocab_sz)\n",
+    "        self.h = 0\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        print('---Forward is called---')\n",
+    "        if not isinstance(self.h, int):\n",
+    "            print(self.h.requires_grad) # false, as we detach it from last 'forward'\n",
+    "        for i in range(3):\n",
+    "            self.h = self.h + self.i_h(x[:,i]) # this operation will always turn self.h requires_grad on (see above)\n",
+    "            # so everything we do with h from here will be backprop, including self.ih, self.h_h and self.h_o\n",
+    "            if i==0: print(self.h.requires_grad)\n",
+    "            self.h = F.relu(self.h_h(self.h))\n",
+    "        out = self.h_o(self.h)\n",
+    "        self.h = self.h.detach() # from now on every grad related to h won't be backprop\n",
+    "        # (except if doing an operation between h and another grad-able tensor, see right above)\n",
+    "        print(self.h.requires_grad) \n",
+    "        return out\n",
+    "    \n",
+    "    def reset(self): \n",
+    "        print('---Reset is called---') # only called once before training,once before validation and once at the end\n",
+    "        self.h = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Back propagation through time (BPTT): Treating a neural net with effectively one layer per time step (usually refactored using a loop) as one big model, and calculating gradients on it in the usual way. To avoid running out of memory and time, we usually use truncated BPTT, which \"detaches\" the history of computation steps in the hidden state every few time steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Reset is called---\n"
+     ]
+    }
+   ],
+   "source": [
+    "learn = Learner(dls, LMModel3(len(vocab), 64), loss_func=F.cross_entropy,\n",
+    "                metrics=accuracy, cbs=ModelResetter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# learn.fit_one_cycle(1, 3e-3)"
    ]
   }
  ],
