transformer demo code

--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -170,6 +170,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](images/transformer_12.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Transformer's Encoder"
    ]
   },
@@ -203,8 +210,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: mapping Q,K,V to multiple lower dimensional spaces using fully-connected linear layer\n",
+    "Note: mapping Q,K,V to multiple **lower dimensional spaces** using **fully-connected linear layer**\n",
     "- for head 1 (i=1), use weight matrix WiQ for Q, W1K for K and W1V for V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "W^Q_i \\in\n",
+    "\\mathbb{R}^{d_{\\text{model}} \\times d_k},\n",
+    "W^K_i \\in\n",
+    "\\mathbb{R}^{d_{\\text{model}} \\times d_k},\n",
+    "W^V_i \\in\n",
+    "\\mathbb{R}^{d_{\\text{model}} \\times d_v}, \n",
+    "W^O \\in \\mathbb{R}^{hd_v \\times\n",
+    "d_{\\text{model}}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "d_k=d_v=d_{\\text{model}}/h=64\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Instead of doing this for the entire columns of Q,K,V\n",
+    "$$\n",
+    "\\mathrm{Attention}(Q, K, V) = \\mathrm{softmax}(\\frac{QK^T}{\\sqrt{d_k}})V\n",
+    "$$\n",
+    "we will chop each matrix with originally d_model columns into h sub-matrices by doing matmul with h weight matrices as stated above\n",
+    "\n",
+    "In practices, for each Q,K and V, we combine h weight matrices into 1 matrix with shape (d_model,d_model) to optimize calculation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attention(query, key, value, mask=None, dropout=None):\n",
+    "    \"\"\"\n",
+    "    Compute 'Scaled Dot Product Attention'\n",
+    "    query: shape (bs,h, n, d_k) as n is # of rows in 1 batch of \"query\", h is number of heads for attention\n",
+    "    key: shape (bs,h, m, d_k) as m is # of rows in 1 batch of \"key\"\n",
+    "    value: shape (bs, h, m, d_k)\n",
+    "    \n",
+    "    Note that n = m, and n can be sent_length (number of words for each batch)\n",
+    "    \"\"\" \n",
+    "\n",
+    "    d_k = query.size(-1)\n",
+    "    scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(d_k)\n",
+    "    # (bs,h, n, d_k) @ (bs,h, m, d_k) = (bs,h,n,m) aka QKt\n",
+    "    if mask is not None:\n",
+    "        scores = scores.masked_fill(mask == 0, -1e9) # fill mask for softmax\n",
+    "    p_attn = F.softmax(scores, dim = -1)\n",
+    "    if dropout is not None:\n",
+    "        p_attn = dropout(p_attn)\n",
+    "    return torch.matmul(p_attn, value), p_attn # (bs,h,n,m) @ (bs, h, m, d_k) = (bs,h,n,d_k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadedAttention(nn.Module):\n",
+    "    def __init__(self, h, d_model, dropout=0.1):\n",
+    "        \"Take in model size and number of heads.\"\n",
+    "        super(MultiHeadedAttention, self).__init__()\n",
+    "        assert d_model % h == 0\n",
+    "        # We assume d_v always equals d_k\n",
+    "        self.d_k = d_model // h\n",
+    "        self.h = h\n",
+    "        self.linears = clones(nn.Linear(d_model, d_model), 4) # 4 linear layers\n",
+    "        # we use the first 3 linears (Wq,Wk and Wv) to calculate attention,\n",
+    "        # and the last linear (Wo) to project attention \n",
+    "        \n",
+    "        # note that technically Wq (or Wk,Wv) is a combination of \n",
+    "        # h sub matrices shape (d_model,d_k) for projection to h lower dimensional space\n",
+    "\n",
+    "        self.attn = None\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "        \n",
+    "    def forward(self, query, key, value, mask=None):\n",
+    "        \"\"\"\n",
+    "        Implements Figure 2\n",
+    "        \n",
+    "        query: (bs,n,d_model)\n",
+    "        key: (bs,m,d_model)\n",
+    "        value: (bs,m,d_model)\n",
+    "        \n",
+    "        Note that d_model = h * d_k\n",
+    "        and d_k = d_v \n",
+    "        Also n = m\n",
+    "        n can be sent_length (number of words for each batch)\n",
+    "        \"\"\"\n",
+    "        if mask is not None:\n",
+    "            # Same mask applied to all h heads.\n",
+    "            mask = mask.unsqueeze(1)\n",
+    "        nbatches = query.size(0)\n",
+    "        \n",
+    "        # 1) Do all the linear projections in batch from d_model => h x d_k \n",
+    "        query, key, value = \\\n",
+    "            [l(x).view(nbatches, -1, self.h, self.d_k).transpose(1, 2)\n",
+    "             for l, x in zip(self.linears, (query, key, value))]\n",
+    "        # for query: (bs,n,d_model)@(d_model,d_model) = (bs,n,d_model) = (bs,n,h,d_k) = (bs,h,n,d_k)\n",
+    "        # do the same for key and value\n",
+    "        \n",
+    "        # 2) Apply attention on all the projected vectors in batch. \n",
+    "        x, self.attn = attention(query, key, value, mask=mask, \n",
+    "                                 dropout=self.dropout)\n",
+    "        # x has shape (bs,h,n,d_k)\n",
+    "        \n",
+    "        # 3) \"Concat\" using a view and apply a final linear. \n",
+    "        x = x.transpose(1, 2).contiguous().view(nbatches, -1, self.h * self.d_k)\n",
+    "        # (bs,h,n,d_k) = (bs,n,h,d_k) = (bs,n, h*d_k) aka (bs,n,d_model) then @ (d_model,d_model)\n",
+    "        return self.linears[-1](x)"
    ]
   },
   {
@@ -222,6 +354,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SublayerConnection(nn.Module):\n",
+    "    \"\"\"\n",
+    "    A residual connection followed by a layer norm.\n",
+    "    Note for code simplicity the norm is first as opposed to last.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, size, dropout):\n",
+    "        super(SublayerConnection, self).__init__()\n",
+    "        self.norm = LayerNorm(size)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x, sublayer):\n",
+    "        \"Apply residual connection to any sublayer with the same size.\"\n",
+    "        \"\"\"\n",
+    "        x shape: (bs,n,d_model)\n",
+    "        n can be sent_length (number of words for each batch)\n",
+    "        \"\"\"\n",
+    "\n",
+    "        return x + self.dropout(sublayer(self.norm(x))) #residual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderLayer(nn.Module):\n",
+    "    \"Encoder is made up of self-attn and feed forward (defined below)\"\n",
+    "    def __init__(self, size, self_attn, feed_forward, dropout):\n",
+    "        super(EncoderLayer, self).__init__()\n",
+    "        self.self_attn = self_attn # which is MultiHeadAttention as defined above\n",
+    "        self.feed_forward = feed_forward # probably just nn.Linear\n",
+    "        self.sublayer = clones(SublayerConnection(size, dropout), 2)\n",
+    "        self.size = size\n",
+    "\n",
+    "    def forward(self, x, mask):\n",
+    "        \"Follow Figure 1 (left) for connections.\"\n",
+    "        \"\"\"\n",
+    "        x shape: (bs,n,d_model)\n",
+    "        n can be sent_length (number of words for each batch)\n",
+    "        \"\"\"\n",
+    "        x = self.sublayer[0](x, lambda x: self.self_attn(x, x, x, mask))\n",
+    "        return self.sublayer[1](x, self.feed_forward) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Layer norm"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -229,6 +419,31 @@
     "- calculated for EACH TRAINING POINT\n",
     "- No moving average\n",
     "- Average over the hidden dimension to make the norm strategy independent of the batch size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LayerNorm(nn.Module):\n",
+    "    \"Construct a layernorm module (See citation for details).\"\n",
+    "    def __init__(self, features, eps=1e-6):\n",
+    "        super(LayerNorm, self).__init__()\n",
+    "        self.a_2 = nn.Parameter(torch.ones(features))\n",
+    "        self.b_2 = nn.Parameter(torch.zeros(features))\n",
+    "        self.eps = eps\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        x shape: (bs,n,d_model)\n",
+    "        n can be sent_length (number of words for each batch)\n",
+    "        \"\"\"\n",
+    "        mean = x.mean(-1, keepdim=True) # taking the mean of each word embedding (?) individually, each word is just a vector\n",
+    "        # similar to layer norm in CV: m = x.mean((1,2,3), keepdim=True), each image is a 3D matrix\n",
+    "        std = x.std(-1, keepdim=True)\n",
+    "        return self.a_2 * (x - mean) / (std + self.eps) + self.b_2"
    ]
   },
   {
@@ -293,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO"
+    "![](images/transformer_11.png)"
    ]
   },
   {
